--- a/ProjectoEsw/Views/Tecnico/AnalisarCandidatura.cshtml
+++ b/ProjectoEsw/Views/Tecnico/AnalisarCandidatura.cshtml
@@ -128,12 +128,9 @@
     </div>
     <div class="col-sm-12">
         <label asp-for="Instituicoes" class="col-sm-3 control-label"></label>
-        @foreach (var item in Model.Instituicoes)
-        {
             <div class="col-sm-offset-4">
-                <h5>@item.Instituicao.NomeInstituicao</h5>
+                <h5></h5>
             </div>
-        }
     </div>
     <div class="col-sm-12">
         <label asp-for="Bolsa" class="col-sm-3 control-label"></label>
@@ -149,7 +146,7 @@
         </div>
     </div>
 
-    <div class="col-sm-12">
+    <div class="col-sm-8">
         <label asp-for="CartaMotivacao" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-4">
             <p>@Model.CartaMotivacao</p>
@@ -161,7 +158,7 @@
 </div>
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
-    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
-    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
-    <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
+    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
+    <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidaturas" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
 </div>
