--- a/ProjectoEsw/Views/Tecnico/Perfil.cshtml
+++ b/ProjectoEsw/Views/Tecnico/Perfil.cshtml
@@ -22,7 +22,14 @@
     <div class="col-sm-12">
         <label asp-for="NomeCompleto" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-3">
-            <h5>@Model.NomeCompleto</h5>
+            @if (@Model.NomeCompleto == "")
+            {
+                <h5>Sem Informacao</h5>
+            }
+            else
+            {
+                <h5>@Model.NomeCompleto</h5>
+            }
         </div>
     </div>
     <div class="col-sm-12">
@@ -41,19 +48,40 @@
     <div class="col-sm-12">
         <label asp-for="Nif" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-3">
-            <h5>@Model.Nif</h5>
+            @if (@Model.Nif == 0)
+            {
+                <h5>Sem Informacao</h5>
+            }
+            else
+            {
+                <h5>@Model.Nif</h5>
+            }
         </div>
     </div>
     <div class="col-sm-12">
         <label asp-for="NumeroIdentificacao" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-3">
-            <h5>@Model.NumeroIdentificacao</h5>
+            @if (@Model.NumeroIdentificacao == 0)
+            {
+                <h5>Sem Informacao</h5>
+            }
+            else
+            {
+                <h5>@Model.NumeroIdentificacao</h5>
+            }
         </div>
     </div>
     <div class="col-sm-12">
         <label asp-for="Telefone" class="col-sm-3 control-label"></label>
         <div class="col-sm-offset-3">
-            <h5>@Model.Telefone</h5>
+            @if (@Model.Telefone == "")
+            {
+                <h5>Sem Informacao</h5>
+            }
+            else
+            {
+                <h5>@Model.Telefone</h5>
+            }
         </div>
     </div>
     <div class="col-sm-12">
@@ -65,7 +93,8 @@
 </div>
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
-    <a asp-area="" asp-controller="Tecnico" asp-action="Index" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
-    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
-    <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidatura" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
+    <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
+    <a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs center-block col-sm-12">Editar Perfil</a>-->
+
+    <a asp-area="" asp-controller="Tecnico" asp-action="ListaCandidaturas" class="btn btn-link btn-xs pull-right col-sm-12">Lista Candidaturas</a>
 </div>
