--- a/ProjectoEsw/Views/Candidato/CandidaturaErasmus.cshtml
+++ b/ProjectoEsw/Views/Candidato/CandidaturaErasmus.cshtml
@@ -96,7 +96,7 @@
                 <input asp-for="AnoCurricular" placeholder="Seu ano curricular" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Ano Curricular").Descricao" />
                 <span asp-validation-for="AnoCurricular" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <select name="Instituicoes" asp-items="gestor.InstituicoesInternasSelect()" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Instituicoes").Descricao">
+                <select asp-for="Instituicoes" asp-items="gestor.InstituicoesInternasSelect()" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Instituicoes").Descricao">
                     <option value="0">Escolha a Instituicao</option>
                 </select>
                 <div class="help-block"></div>
