--- a/ProjectoEsw/Views/Candidato/CandidaturaErasmus.cshtml
+++ b/ProjectoEsw/Views/Candidato/CandidaturaErasmus.cshtml
@@ -98,7 +98,7 @@
                 @for (int i = 0; i < @Model.Instituicoes.Count; i++)
                 {
                     var checkbox1 = "checkbox" + i;
-                    <input name=@checkbox1 type="checkbox" />
+                    <input name="lista" type="checkbox" value="@Model.Instituicoes[i].ID"/>
                     <label>@Model.Instituicoes[i].NomeInstituicao</label>
                     <input asp-for="@Model.Instituicoes[i].ID" type="hidden" />
                 }
