--- a/ProjectoEsw/Views/Tecnico/SobreNos.cshtml
+++ b/ProjectoEsw/Views/Tecnico/SobreNos.cshtml
@@ -19,16 +19,11 @@
     <a asp-area="" asp-controller="Tecnico" asp-action="SobreNos">Sobre Nós</a>
 }
 <!--Home-->
-<div class="jumbotron col-sm-5">
-    <h1>Erasmus+</h1>
-    <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
+<div class="jumbotron col-sm-8">
+    <h1>Sobre Nos/h1>
+    <p> Resto Informacao + links</p>
 </div>
-<div class="jumbotron col-sm-5 col-sm-offset-1">
-    <h1>Programa Santander</h1>
-    <p> Resto Informacao + links + prazos</p>
-    <button type="submit" class="btn btn-default center-block">Candidatar-me</button>
-</div>
+
 <div class="jumbotron col-sm-3 col-sm-offset-1">
     <h5 class="text-center">Opcoes</h5>
     <!--<a asp-area="" asp-controller="Tecnico" asp-action="Perfil" class="btn btn-link btn-xs pull-right col-sm-12">Ver Perfil</a>
