--- a/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
+++ b/ProjectoEsw/Views/Candidato/EditarPerfil.cshtml
@@ -25,7 +25,7 @@
 
     <div class="container col-lg-offset-1 col-sm-10">
         <h2 class="text-center">Editar Perfil</h2>
-        <form class="form-horizontal" asp-controller="Candidato" asp-action="EditarPerfil" method="post">
+        <form class="form-horizontal" asp-controller="Candidato" asp-action="EditarPerfil" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <div class=" help-block"></div>
