--- a/ProjectoEsw/Views/Tecnico/AnalisarCandidatura.cshtml
+++ b/ProjectoEsw/Views/Tecnico/AnalisarCandidatura.cshtml
@@ -18,138 +18,142 @@
     <a asp-area="" asp-controller="Tecnico" asp-action="SobreNos">Sobre Nós</a>
 }
 <div class="jumbotron col-sm-8">
-    <h2 class=" text-center">Candidatura Submetida</h2>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.NomeCompleto" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.NomeCompleto</h5>
+    <div class="form-group">
+        <h2 class=" text-center">Candidatura Submetida</h2>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.NomeCompleto" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.NomeCompleto</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.DataNasc" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.DataNasc</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.Email" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5> @Model.Candidato.Perfil.Email</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.Nif" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5> @Model.Candidato.Perfil.Nif</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.NumeroIdentificacao" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5> @Model.Candidato.Perfil.NumeroIdentificacao</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.MoradaRua" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5> @Model.Candidato.Perfil.MoradaRua</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.MoradaCodigoPostal" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.MoradaCodigoPostal </h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.Nacionalidade" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5> @Model.Candidato.Perfil.Nacionalidade</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.MoradaConcelho" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.MoradaConcelho</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.MoradaDistrito" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.MoradaDistrito</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="Candidato.Perfil.Telefone" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Candidato.Perfil.Telefone</h5>
+            </div>
         </div>
     </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.DataNasc" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.DataNasc</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.Email" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5> @Model.Candidato.Perfil.Email</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.Nif" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5> @Model.Candidato.Perfil.Nif</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.NumeroIdentificacao" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5> @Model.Candidato.Perfil.NumeroIdentificacao</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.MoradaRua" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5> @Model.Candidato.Perfil.MoradaRua</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.MoradaCodigoPostal" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.MoradaCodigoPostal </h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.Nacionalidade" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5> @Model.Candidato.Perfil.Nacionalidade</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.MoradaConcelho" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.MoradaConcelho</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.MoradaDistrito" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.MoradaDistrito</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Candidato.Perfil.Telefone" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Candidato.Perfil.Telefone</h5>
-        </div>
-    </div>
+    <div class="form-group">
+        <h4>Dados do Contacto em caso de emergencia</h4>
 
-    <h4>Dados do Contacto em caso de emergencia</h4>
-
-    <div class="col-sm-12">
-        <label asp-for="NomeEmergencia" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.NomeEmergencia</h5>
-            }
+        <div class="col-sm-12">
+            <label asp-for="NomeEmergencia" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.NomeEmergencia</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="AfiliacaoEmergencia" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.AfiliacaoEmergencia</h5>
+            </div>
+        </div>
+        <div class="col-sm-12">
+            <label asp-for="NumeroEmergencia" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.NumeroEmergencia</h5>
+            </div>
         </div>
     </div>
-    <div class="col-sm-12">
-        <label asp-for="AfiliacaoEmergencia" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.AfiliacaoEmergencia</h5>
+    <div class="form-group">
+        <h4>Dados Candidatura</h4>
+        <div class="col-sm-12">
+            <label asp-for="Escola" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.Escola</h5>
+            </div>
         </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="NumeroEmergencia" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.NumeroEmergencia</h5>
+        <div class="col-sm-12">
+            <label asp-for="CursoFrequentado" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.CursoFrequentado</h5>
+            </div>
         </div>
-    </div>
-    <h4>Dados Candidatura</h4>
-    <div class="col-sm-12">
-        <label asp-for="Escola" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.Escola</h5>
+        <div class="col-sm-12">
+            <label asp-for="AnoCurricular" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <h5>@Model.AnoCurricular</h5>
+            </div>
         </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="CursoFrequentado" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.CursoFrequentado</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="AnoCurricular" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <h5>@Model.AnoCurricular</h5>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Instituicoes" class="col-sm-3 control-label"></label>
+        <div class="col-sm-12">
+            <label asp-for="Instituicoes" class="col-sm-3 control-label"></label>
             <div class="col-sm-offset-4">
                 <h5></h5>
             </div>
-    </div>
-    <div class="col-sm-12">
-        <label asp-for="Bolsa" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            @if (Model.Bolsa == true)
-            {
-                <h5>Sim</h5>
-            }
-            else
-            {
-                <h5>Não</h5>
-            }
         </div>
-    </div>
+        <div class="col-sm-12">
+            <label asp-for="Bolsa" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                @if (Model.Bolsa == true)
+            {
+                    <h5>Sim</h5>
+                }
+                else
+                {
+                    <h5>Não</h5>
+                }
+            </div>
+        </div>
 
-    <div class="col-sm-8">
-        <label asp-for="CartaMotivacao" class="col-sm-3 control-label"></label>
-        <div class="col-sm-offset-4">
-            <p>@Model.CartaMotivacao</p>
+        <div class="col-sm-8">
+            <label asp-for="CartaMotivacao" class="col-sm-3 control-label"></label>
+            <div class="col-sm-offset-4">
+                <p>@Model.CartaMotivacao</p>
+            </div>
         </div>
     </div>
     <a asp-area="" asp-controller="Tecnico" asp-action="RejeitarCandidatura" class="btn btn-default btn-xs center-block col-sm-12">Rejeitar</a>
