--- a/ProjectoEsw/Views/Shared/_Layout.cshtml
+++ b/ProjectoEsw/Views/Shared/_Layout.cshtml
@@ -20,8 +20,10 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/lib/fullcalendar/dist/fullcalendar.js"></script>
     <script src="~/lib/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-    
-    <script src="~/lib/fullcalendar/dist/locale/pt.js"></script>
+
+    <script src="https://canvasjs.com/assets/script/canvasjs.min.js">
+
+        <script src="~/lib/fullcalendar/dist/locale/pt.js"></script>
     <script src="~/lib/moment/locale/pt.js"></script>
 
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
@@ -35,7 +37,6 @@
             $('[data-toggle="popover"]').popover();
         });
     </script>
-    
 </head>
 <body>
     <div class="container">
