--- a/ProjectoEsw/Views/Candidato/AlterarCandidaturaErasmus.cshtml
+++ b/ProjectoEsw/Views/Candidato/AlterarCandidaturaErasmus.cshtml
@@ -26,7 +26,7 @@
 <div class="jumbotron col-sm-7 col-sm-offset-1">
     <span class="glyphicon glyphicon-question-sign" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaPagina("Home.EditarPerfil").Descricao"></span>
     <div class="container col-lg-offset-1 col-sm-10">
-        <h2 class="text-center">Alterar Candidatura @Model.TipoCandidatura.Tipo</h2><!--Model.TipoCandidaturaFK TipoCandidatura virtual?-->
+        <h2 class="text-center">Alterar Candidatura  @Model.TipoCandidatura.Tipo </h2><!--Model.TipoCandidaturaFK TipoCandidatura virtual?-->
         <form class="form-horizontal" asp-controller="Candidato" asp-action="AlterarCandidatura" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -43,7 +43,7 @@
                 <input asp-for="Candidato.Perfil.Nif" placeholder="Numero de Identificação Fiscal" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","NIF").Descricao" />
                 <span asp-validation-for="Candidato.Perfil.Nif" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="Candidato.Perfil.NumeroIdentificacao" placeholder="Numero de Identificação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Numero Identificaçãor").Descricao" />
+                <input asp-for="Candidato.Perfil.NumeroIdentificacao" placeholder="Numero de Identificação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Numero Identificação").Descricao" />
                 <span asp-validation-for="Candidato.Perfil.NumeroIdentificacao" class="text-danger"></span>
                 <div class=" help-block"></div>
                 <input asp-for="Candidato.Perfil.MoradaRua" placeholder="Rua da Morada" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.candidatura","Morada Rua").Descricao" />
@@ -79,7 +79,7 @@
                 <input asp-for="AfiliacaoEmergencia" placeholder="Afiliação" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Afiliacao Emergencia").Descricao" />
                 <span asp-validation-for="AfiliacaoEmergencia" class="text-danger"></span>
                 <div class=" help-block"></div>
-                <input asp-for="NumeroEmergencia" placeholder="Telefone do contacto de emergencia" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Numero Emergencia").Descricao" />
+                <input asp-for="NumeroEmergencia" placeholder="Telefone do contacto de emergencia" class="form-control" data-toggle="popover" data-trigger="hover" data-content="@gestorAjudas.BuscarAjudaCampo("Candidato.Candidatura","Telefone Emergencia").Descricao" />
                 <span asp-validation-for="NumeroEmergencia" class="text-danger"></span>
                 <div class=" help-block"></div>
 
