--- a/ProjectoEsw/Views/Candidato/VerEstatisticas.cshtml
+++ b/ProjectoEsw/Views/Candidato/VerEstatisticas.cshtml
@@ -31,27 +31,53 @@
 </div>
 
 <div class="col-sm-8">
-    <div id="chartContainer"></div>
+    <div class="text-center">
+        <a class="btn btn-default">Instituicoes</a>
+        <a class="btn btn-default">Destinos</a>
+        <a class="btn btn-default">Candidaturas</a>
+        <a class="btn btn-default">Tipo Candidatura</a>
+        <a class="btn btn-default">Bolsas</a>
+    </div>
+    <div id="instituicoesChart"></div>
+    <div id="tipoChart"></div>
+    <div>
+
+    </div>
 </div>
 
 <script type="text/javascript">
-        window.onload = function () {
-            var chart = new CanvasJS.Chart("chartContainer", {
+    window.onload = function () {
+        var chart = new CanvasJS.Chart("instituicoesChart", {
+            theme: "theme2",
+            animationEnabled: true,
+            title: {
+                text: "Estatisticas Instituicoes"
+            },
+            subtitles: [{ text: "Numero de alunos por insituicoes" }],
+            data: [
+                {
+                    type: "column", //change type to bar, line, area, pie, etc
+                    dataPoints: @Html.Raw(ViewBag.dataPointsIns)
+                            }
+                ]
+            });
+             var chart1 = new CanvasJS.Chart("tipoChart", {
                 theme: "theme2",
                 animationEnabled: true,
                 title: {
-                    text: "Simple Column Chart in ASP.NET MVC"
+                    text: "Estatisticas Tipo Mobilidade"
                 },
-                subtitles: [{ text: "Try Resizing the Browser" }],
+                subtitles: [{ text: "Numero de alunos por tipo de mobilidade" }],
                 data: [
                     {
                         type: "column", //change type to bar, line, area, pie, etc
-                        dataPoints: @Html.Raw(ViewBag.DataPoints)
+                        dataPoints: @Html.Raw(ViewBag.dataPointsTipo)
                             }
                 ]
             });
             chart.render();
-        };
+            chart1.render();
+    };
 </script>
 
 
